tests/ui/imports/glob-shadowing.stderr
error[E0659]: `env` is ambiguous
  --> $DIR/glob-shadowing.rs:12:17
   |
LL |         let x = env!("PATH");
   |                 ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
   = note: `env` could refer to a macro from prelude
note: `env` could also refer to the macro imported here
  --> $DIR/glob-shadowing.rs:10:9
   |
LL |     use m::*;
   |         ^^^^
   = help: consider adding an explicit import of `env` to disambiguate
   = help: or use `self::env` to refer to this macro unambiguously

error[E0659]: `env` is ambiguous
  --> $DIR/glob-shadowing.rs:20:21
   |
LL |             let x = env!("PATH");
   |                     ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
   = note: `env` could refer to a macro from prelude
note: `env` could also refer to the macro imported here
  --> $DIR/glob-shadowing.rs:18:13
   |
LL |         use m::*;
   |             ^^^^
   = help: consider adding an explicit import of `env` to disambiguate

error[E0659]: `fenv` is ambiguous
  --> $DIR/glob-shadowing.rs:30:21
   |
LL |             let x = fenv!();
   |                     ^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `fenv` could refer to the macro imported here
  --> $DIR/glob-shadowing.rs:28:13
   |
LL |         use m::*;
   |             ^^^^
   = help: consider adding an explicit import of `fenv` to disambiguate
note: `fenv` could also refer to the macro defined here
  --> $DIR/glob-shadowing.rs:26:5
   |
LL |     pub macro fenv($e: expr) { $e }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: use `self::fenv` to refer to this macro unambiguously

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0659`.
